trunk/Archive2/77/33ab7fcc5284c1/output
main.cpp: In function 'std::string newstudent(std::string)':
main.cpp:52:6: warning: unused variable 'i' [-Wunused-variable]
  int i;
      ^
main.cpp: In function 'int main()':
main.cpp:94:18: error: cannot convert 'std::string {aka std::basic_string<char>}' to 'int' for argument '1' to 'bool detect(int)'
  valid = detect(m);  
                  ^
main.cpp:99:18: error: cannot convert 'std::string {aka std::basic_string<char>}' to 'int' for argument '1' to 'bool detect(int)'
  valid = detect(m);
                  ^
main.cpp:102:12: error: switch quantity not an integer
   switch (m){
            ^
